# chip8

./: Cargo.toml  README.md
src/: main.rs  platform.rs  raylib_backend.rs
src/chip8/: mod.rs
