[package]
name = "chip8"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.9.2"
raylib = "5.5.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
